--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.isibboi</groupId>
 	<artifactId>bibelgram</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>Bibelgram</name>
 	<build>
 		<sourceDirectory>src/main/java</sourceDirectory>
