--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,6 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
-bibel.ind
+*.ind
+wa-all.txt
+wa-me.txt
